[gd_scene load_steps=7 format=3 uid="uid://ci8iidly3i18f"]

[ext_resource type="Texture2D" uid="uid://b2kpqy7l0eoni" path="res://Assets/icon.svg" id="1_xq0bs"]
[ext_resource type="Script" path="res://Scripts/DiffChecker.gd" id="2_osq0j"]
[ext_resource type="Theme" uid="uid://08hv88tc1qqh" path="res://Fonts/ApfelTheme.tres" id="3_41obg"]
[ext_resource type="StyleBox" uid="uid://co1mcfxjjtg57" path="res://Assets/buttonSBoxClick.tres" id="4_o0gly"]
[ext_resource type="StyleBox" uid="uid://jjq6i5iwgye" path="res://Assets/buttonSBoxNorm.tres" id="5_ft3xo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71f0l"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("1_xq0bs")
expand_mode = 3
stretch_mode = 4

[node name="CreateProj" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
script = ExtResource("2_osq0j")

[node name="RomDialog" type="FileDialog" parent="MarginContainer/VBoxContainer2/CreateProj"]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(303, 180)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="RomLabel" type="Label" parent="MarginContainer/VBoxContainer2/CreateProj"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("3_41obg")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_71f0l")
text = "Rom"

[node name="RomDialogBtn" type="Button" parent="MarginContainer/VBoxContainer2/CreateProj"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_41obg")
theme_override_styles/hover_pressed = ExtResource("4_o0gly")
theme_override_styles/hover = ExtResource("5_ft3xo")
theme_override_styles/pressed = ExtResource("4_o0gly")
theme_override_styles/normal = ExtResource("5_ft3xo")
text = "Pick Rom"

[node name="RomLabel2" type="Label" parent="MarginContainer/VBoxContainer2/CreateProj"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("3_41obg")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_71f0l")
text = "Rom"

[node name="RomDialogBtn2" type="Button" parent="MarginContainer/VBoxContainer2/CreateProj"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_41obg")
theme_override_styles/hover_pressed = ExtResource("4_o0gly")
theme_override_styles/hover = ExtResource("5_ft3xo")
theme_override_styles/pressed = ExtResource("4_o0gly")
theme_override_styles/normal = ExtResource("5_ft3xo")
text = "Pick Rom"

[node name="Diffs" type="Button" parent="MarginContainer/VBoxContainer2/CreateProj"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_41obg")
theme_override_styles/hover_pressed = ExtResource("4_o0gly")
theme_override_styles/hover = ExtResource("5_ft3xo")
theme_override_styles/pressed = ExtResource("4_o0gly")
theme_override_styles/normal = ExtResource("5_ft3xo")
text = "PrintDiffs
"

[connection signal="file_selected" from="MarginContainer/VBoxContainer2/CreateProj/RomDialog" to="MarginContainer/VBoxContainer2/CreateProj" method="onRomSelected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CreateProj/RomDialogBtn" to="MarginContainer/VBoxContainer2/CreateProj" method="openRomADialog"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CreateProj/RomDialogBtn2" to="MarginContainer/VBoxContainer2/CreateProj" method="openRomBDialog"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CreateProj/Diffs" to="MarginContainer/VBoxContainer2/CreateProj" method="checkHeaderDiffs"]
